--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   
   <li>
     <span class="date">2019/10/11</span>
-    <a href="/about/about/">About</a>
+    <a href="/about/">About</a>
   </li>
   
 </ul>
